@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  11 Aug 2005; Marius Mauch <genone@gentoo.org> pym/elog_modules/mod_mail.py:
+  Fixed missing portage_exception import and type errors in the exception
+  handler.
+
   10 Aug 2005; Mike Frysinger <vapier@gentoo.org> bin/quickpkg:
   Call gawk instead of awk so non-GNU systems work #102050 by Stephen Bennett.
   Also clean up the script a bit.
